--- a/details.html
+++ b/details.html
@@ -134,18 +134,7 @@
 						<h3 class="subHead m-0 py-2">Code Files <i class="fas fa-plus collapsable-list-toggle" tabindex="0"></i></h3>
 						<ul class="collapsable-list">
 							<li>
-								<form method="get" action="diceRoller.css" target="_blank">
-									<button class="border-0 bg-transparent" type="submit">			
-										   <span class="code-file-link">diceRoller.css</span>
-									</button>
-								</form>
-							</li>
-							<li>
-								<form method="get" action="diceRoller.js" target="_blank">
-									<button class="border-0 bg-transparent" type="submit">			
-										   <span class="code-file-link">diceRoller.js</span>
-									</button>
-								</form>
+								<a href="https://github.com/tylert93/diceRoller.git" target="_blank">Github</a>
 							</li>
 						</ul>
 					</div>
